# PayMint

./: .gitignore  README.md  SUPABASE_SETUP.md  deploy_escrow.ps1  docker-compose.yml  package-lock.json  package.json  vercel.json
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: add_columns.sql  schema.prisma  schema.sql  supabase_schema.sql
apps/api/scripts/: add_columns.js  fix-notifications.js
apps/api/src/: index.ts
apps/api/src/config/: database.ts  inMemoryDb.ts  prisma.ts
apps/api/src/middleware/: errorHandler.ts
apps/api/src/routes/: agent.routes.ts  notification.routes.ts  payment.routes.ts  service.routes.ts  stellar.routes.ts  webhook.routes.ts
apps/api/src/services/: agent.service.ts  escrow.service.ts  payment.service.ts  service.service.ts  soroban-escrow.service.ts  stellar.service.ts  webhook.service.ts  x402.service.ts
apps/web/: .env.local.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  paymint.css
apps/web/src/app/connect/: page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/components/: ConnectWallet.tsx
apps/web/src/context/: StellarContext.tsx
contracts/: BUILD.md  Cargo.toml
contracts/agent_registry/: Cargo.toml
contracts/agent_registry/src/: lib.rs
contracts/simple_escrow/: Cargo.toml  README.md  build.rs
contracts/simple_escrow/.cargo/: config.toml
contracts/simple_escrow/src/: lib.rs
docs/: AGENTS_SERVICES_DEMO_DATA.md  DEPLOYMENT.md  ESCROW_SETUP.md  README.md  SUPABASE_SETUP.md
(+19 files in other folders)
