[workspace]
name = "agentpay-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "20.0.0", features = ["serde"] }
soroban-env-common = "20.0.0"
stellar-xdr = { version = "20.0.0", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true